Update layout issues with checkbox

--- a/src/styles.css
+++ b/src/styles.css
@@ -76,7 +76,7 @@ body {
 
 .section-title {
   color: #000;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -93,19 +93,19 @@ body {
 }
 
 .a-title {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
 }
 
 .a-subtitle {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 /* title on projects & achievements page */
 
 .pa-title {
   color: #000;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -117,15 +117,15 @@ body {
 }
 
 .caption {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   padding-bottom: 25px;
   font-style: italic;
 }
 
 .caption::before,
 .caption::after {
-  content: "";
-  background-image: url("assets/icons/quote-white.svg");
+  content: '';
+  background-image: url('assets/icons/quote-white.svg');
   background-repeat: no-repeat;
   background-size: contain;
   width: 50px;
@@ -154,7 +154,7 @@ body {
 }
 
 .chip {
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
   letter-spacing: 1px;
   font-size: 16px !important;
   background-color: #dcdcdc !important;
@@ -162,13 +162,13 @@ body {
 }
 
 .card-header {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
   font-size: 24px;
 }
 
 .card-body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
   letter-spacing: 1px;
 }
@@ -181,7 +181,7 @@ button {
   background-color: transparent;
   text-transform: uppercase !important;
   text-align: center;
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
   font-weight: bold;
   letter-spacing: 2px;
 }
@@ -225,7 +225,7 @@ button:hover {
   position: absolute;
   top: 8px;
   left: 15px;
-  content: " ";
+  content: ' ';
   height: 25px;
   width: 2px;
   background-color: #fff;
@@ -423,7 +423,7 @@ button:hover {
 /* accept terms & privacy on forms */
 
 .accept-checkbox {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   letter-spacing: 1px;
   color: #808080;
   text-align: left;
@@ -437,17 +437,22 @@ button:hover {
   cursor: pointer;
 }
 
+.accept-checkbox label {
+  margin-top: 5px;
+  padding-left: 5px;
+}
+
 /* terms, privacy, disclaimer */
 
 .legal-title {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
   text-align: center;
 }
 
 .legal-content {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   letter-spacing: 1px;
 }
 
@@ -492,7 +497,7 @@ button:hover {
 /* temporary */
 
 .error-title {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -501,7 +506,7 @@ button:hover {
 }
 
 .error-image {
-  background-image: url("https://iamsainikhil.github.io/assets/icons/page_under_construction.svg");
+  background-image: url('https://iamsainikhil.github.io/assets/icons/page_under_construction.svg');
 }
 
 /* tooltip */
@@ -546,7 +551,7 @@ button:hover {
   opacity: 0;
   position: absolute;
   z-index: 99;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
   padding: 5px 15px;
   margin-top: -5px;
@@ -557,7 +562,7 @@ button:hover {
 }
 
 .tip span.message::after {
-  content: "";
+  content: '';
   display: block;
   position: absolute;
   border-top: 8px solid transparent;
